Fixed tex errors

--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -226,6 +226,11 @@ According to [14] and [15], SMT-based model checking can be used to verify the s
 
 There are two directives in C/C++ that can be used to guide a model checker to solve an optimization problem: ASSUME and ASSERT. The directive ASSUME is responsible for ensuring the compliance of constraints (software costs), and the directive ASSERT controls the halt condition or code violation (minimum hardware cost). Then, with some C/C++ code, it is possible to guide ESBMC to solve optimization problems.
 
+%----------------------------------------------
+\subsection{OpenMP}
+%----------------------------------------------
+
+\textcolor{blue}{The OpenMP is a set of directives that augments the C/C++ and Fortran languages. OpenMP uses the fork-join model of parallel execution}
 
 %----------------------------------------------
 \section{Mathematical modeling}
@@ -675,12 +680,12 @@ Finally, there is an issue about 150 nodes problem, since it seems to be the lim
 \providecommand{\eprint}[2][]{\url{#2}}
 
 %1
-\bibitem{Arató2003}
-Arató, P., Juhász, S., Mann, Z.A., Orbán, A., Papp, D., ``{Hardware/software partitioning in embedded system design. In: Proceedings of the International Symposium of Intelligent Signal Processing},'' pp. 192-202 (2003)
+\bibitem{Arato2003}
+Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D., ``{Hardware/software partitioning in embedded system design. In: Proceedings of the International Symposium of Intelligent Signal Processing},'' pp. 192-202 (2003)
 
 %2
 \bibitem{Mann2007}
-Mann, Z.A., Orbán, A., Arató, P., ``{Finding optimal hardware/software partitions. In: Formal Methods in System Design, vol. 31},'' {\em Springer}, pp. 241-263.
+Mann, Z.A., Orb\'an, A., Arat\'o, P., ``{Finding optimal hardware/software partitions. In: Formal Methods in System Design, vol. 31},'' {\em Springer}, pp. 241-263.
 
 %3
 \bibitem{Baier2008}
@@ -759,8 +764,8 @@ Hong, L., Cai, J. ``{The application guide of mixed programming between MATLAB a
 Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. ``{MiBench: a free, commercially representative embedded benchmark suite. In: Proceedings of the IEEE 4th annual workshop on workload characterization},'' pp. 3-14 (2001)
 
 %22
-\bibitem{Arató2005}
-Arató, P., Mann, Z.A., Orbán, A. ``{Algorithmic aspects of hardware/software partitioning. In: Association Computing Machinery Transactions on Design Automation of Electronic Systems, vol. 1},'' pp. 136–156 (2005)
+\bibitem{Arato2005}
+Arat\'o, P., Mann, Z.A., Orb\'an, A. ``{Algorithmic aspects of hardware/software partitioning. In: Association Computing Machinery Transactions on Design Automation of Electronic Systems, vol. 1},'' pp. 136–156 (2005)
 
 %23
 \bibitem{Dagum1998}
@@ -768,7 +773,7 @@ Dagum, L., Menon, R. ``{OpenMP: an industry-standard API for shared-memory progr
 
 %24
 \bibitem{DeMoura2008}
-De Moura, L., Bjørner, N. ``{Z3: An Efficient SMT Solver. In: Tools and Algorithms for the Construction and Analysis of Systems (TACAS), LNCS 4963},'' pp. 337–340, Springer (2008) 
+De Moura, L., Bjorner, N. ``{Z3: An Efficient SMT Solver. In: Tools and Algorithms for the Construction and Analysis of Systems (TACAS), LNCS 4963},'' pp. 337–340, Springer (2008) 
 
 %25
 \bibitem{Brummayer2009}
@@ -807,7 +812,7 @@ Bjorner, N., Phan, A-D., Fleckenstein, L. ``{vZ - An Optimizing SMT Solver. In: 
 Qawasmeh, A., Malik, A., Chapman, B. ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization. In: Parallel \& Distributed processing symposium work-shop (IPDPSW), 2014 IEEE International},'' pp. 1049-1058, IEEE (2014)
 
 %34
-\bibitem{Bjørner2014}
+\bibitem{Bjorner2014}
 Nikolaj Bjorner and Anh-Dung Phan ``{vZ - Maximal Satisfaction with Z3. SCSS 2014. 6th International Symposium on Symbolic Computation in Software Science.}''
 
 \end{thebibliography}
