--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -582,7 +582,7 @@ Vz solved correctly 4 of 7 algorithms, got an false positive in the algorithm RC
 \bottomrule[1.5pt]
 
 \end{tabular}
-MC = Multi-core, PS = , PB = .
+MC = Multi-core, PS = Parallel Sequential, PB = Parallel Binary.
 \end{table}
 
 \textcolor{Red}{The table 3 is an extenstion of table 2. The table 3 shows the problems with a higher node and edges quantity, this increase impact directly in the processing time. RC6 had time out for all versions of ESBMC, vZ e GA haven't had the right answer, and ILP solved correctly the problem. Fuzzy had 3 time outs, 3 memory outs, e a wrong answer. ILP was the only one that could solve Mars, GA solved incorrectly and all others had TO or MO.} 
