Translated from PTBR to EN

--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -140,7 +140,7 @@ In [5] and [6] was shown that it is possible to use Bounded Model Checking (BMC)
 
 \textcolor{Red}{Here, we exploit the availability of multi-core processors; in particular, SMT-based verification methods applied to the HW-SW partition propose are proposed, then the results are compared using ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and the vZ tool that is a state-of-art optimization tool [32].} 
 
-\textcolor{Red}{The ILP algorithm uses intlinprog of the lib "Optimization Toolbox"[35], it's function is to search the lower value that satisfies the problem described in Eq.(1). however, for some types of problems is impossible to use ILP due to the high computational cost. GA é uma imitacao do processo evolutivo humano descrito como modelo computacional, sua vantagem é a simplificacao da formulacao de problemas de otimizacao, geralmente é utilizado em problemas com uma quantidade grande de dados(como por exemplo, caixeiro viajante)[37]. Attention should be paid that GA doesn't guarantee to find the minimum or maximum value of the problem, it finds an aproximate solution of the optimized result. vZ is a built-in tool to Z3 solver, its main function is to check the satisfiability of logic formulas in an optimal way, vZ  brings the possibility to combine objectives using "Pareto-fronts", "lexicographic" priorities or independent optimizations.}
+\textcolor{Red}{The ILP algorithm uses intlinprog of the lib "Optimization Toolbox"[35], it's function is to search the lower value that satisfies the problem described in Eq.(1). however, for some types of problems is impossible to use ILP due to the high computational cost. GA is an imitation of the human evolutionary process described as a computational model, its advantage is the simplification of the optimization problems formulation, usually is used on problems with a large amount of data (as travelling salesman)[37]. Attention should be paid that GA doesn't guarantee to find the minimum or maximum value of the problem, it finds an aproximate solution of the optimized result. vZ is a built-in tool to Z3 solver, its main function is to check the satisfiability of logic formulas in an optimal way, vZ  brings the possibility to combine objectives using "Pareto-fronts", "lexicographic" priorities or independent optimizations.}
 
 
 To the best of our knowledge, this is the first work to use a multi-core SMT-based verification to solve a HW-SW partitioning problem in embedded systems. We implement our ideas with the Efficient SMT-based Bounded Model Checker (ESBMC) tool [14]. As its main contribution, this paper shows that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems.
@@ -584,16 +584,16 @@ Vz solved correctly 4 of 7 algorithms, got an false positive in the algorithm RC
 MC = Multi-core, PS = Parallel Sequential, PB = Parallel Binary.
 \end{table}
 
-\textcolor{Red}{ESBMC implementa quatros tipos de estrategias sob seu solucionador. ESBMC, ESBMC Multicore(MC), ESBMC Parallel Sequential(PS) e ESBMC Parallel binary(PB).}
+\textcolor{Red}{ESBMC implement four approach on the solver. ESBMC, ESBMC Multicore(MC), ESBMC Parallel Sequential(PS) and ESBMC Parallel binary(PB).}
 \begin{itemize}
 \item{\textbf{ESBMC}\textcolor{Red}{
-Essa estrategia usa apenas um nucleo para computar o problema de particionamento, seu funcionamento e descrito na secao 2.3}}
+This strategy uses only one core to solve the partitioning problem, it is described in the section 2.3.}}
 \item{\textbf{ESBMC MC}\textcolor{Red}{
-Usa uma estrategia de verificacao crescente \{1\:,2\:,\:...\:,\:Hmax\}, nao se utiliza controladores paralelos nessa abordagem, descreve-se seu funcionamento na secao 5.1 }}
+Uses a sequential strategy \{1\:,2\:,\:...\:,\:Hmax\}, there is not parallel controller in this approach, it is described in the section 5.1.}}
 \item{\textbf{ESBMC PS}\textcolor{Red}{
-esta versao e similar ao ESBMC MC, contudo, seu processamento utilza controles paralelos, descreve-se seu funcionamento na secao 5.2 }}
+This approach is similar with ESBMC MC, however it uses a more optimized way to launch the ESBMC instances, it is described in the section 5.2.}}
 \item{\textbf{ESBMC PB}\textcolor{Red}{
-A abordagem binaria implementa uma versao paralela da busca binaria tradicional, descreve-se seu fucionamento na secao 5.2}}
+The binary approach uses a parallel binary search, it is described in the section 5.2.}}
 \end{itemize}
 
 \textcolor{Red}{The table 3 is an extenstion of table 2. The table 3 shows the problems with a higher node and edges quantity, this increase impact directly in the processing time. RC6 had time out for all versions of ESBMC, vZ e GA haven't had the right answer, and ILP solved correctly the problem. Fuzzy had 3 time outs, 3 memory outs, e a wrong answer. ILP was the only one that could solve Mars, GA solved incorrectly and all others had TO or MO.} 
@@ -687,9 +687,9 @@ In terms of SMT-based verification, most work is restricted to present the model
 \section{Conclusions}
 %----------------------------------------------
 
-\textcolor{Red}{Apos apresentadas as 7 tecnicas e os resultados experimentais para solucao do problema de particao de HW-SW ficou evidenciado que para uma quantidade maior do que 300 nos, a melhor opcao a se escolher e a ILP. abaixo dos 300 nos a melhor opcao se torna o vZ, seu tempo de resposta superior e notorio. ESBMC e uma ferramenta viavel para uma quantidade de nos inferior a 150.}  GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. This error may be reduced by changing some parameters.The computing time to solve the optimization problem reached some hours of execution on a standard desktop computer. 
+\textcolor{Red}{After presented the 7 techniques and the experimental results to the partitioning problem solution of HW-SW became evident that for a quantity of nodes bigger than 300, the best option is ILP. Below 300 the best option turns out to be vZ, its response time is superior and notorious. ESBMC is a viable tool for a quantity of nodes lower than 150.}  GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. This error may be reduced by changing some parameters.The computing time to solve the optimization problem reached some hours of execution on a standard desktop computer. 
 
-If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. However, ESBMC and Vz has BSD-Style license and MIT respectively and can be downloaded and used for free.\textcolor{Red}{ Os resultados dos benchmarks mostraram melhoria de desempenho do ESBMC quando usado de forma paralela, todas as tres tecnicas paralelas citadas ao longo deste trabalho tiveram resultados expressivos. o grande destaque vai para a versao ESMBC PB(Parallel Binary) que se comporta muito bem para um quantidade de nos e arestas intermediaria.}Thus, considering that nowadays the processors have more and more cores, when modeling the problem, it is possible to consider multi-core ESBMC as an alternative to solve the partitioning problem. 
+If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. However, ESBMC and Vz has BSD-Style license and MIT respectively and can be downloaded and used for free.\textcolor{Red}{ The benchmarks results shows the improvement of ESBMC when using a parallel approach, all three parallel techniques mentioned in this paper had expressive results. The biggest highlight goes to the ESBMC PB (Parallel Binary) which behaves very well for an intermediate amount of edges and nodes.}Thus, considering that nowadays the processors have more and more cores, when modeling the problem, it is possible to consider multi-core ESBMC as an alternative to solve the partitioning problem. 
 
 Finally, there is an issue about 150 nodes problem, since it seems to be the limit of ESBMC. It really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for bigger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the size of the search space. \textcolor{Red}{On future works we will address improvements in the ESBMC, we hope to remove the parallel layer on top of ESBMC and implement it on it's core, it would optimize the processing time.}
 \section{References}
